<resources>    <string name="logo">logo</string>    <!--personal info-->    <string name="author">Toaok</string>    <string name="git_hub">GitHub</string>    <string name="blog">Blog</string>    <string name="demo_of_desc">Demo of Android</string>    <!--menu title-->    <string name="menu_item_git_hub">@string/git_hub</string>    <string name="menu_item_blog">@string/blog</string>    <string name="menu_item_website">Website</string>    <string name="menu_item_about">About</string>    <!--DrawerLayout-->    <string name="drawer_open">Open navigation drawer</string>    <string name="drawer_close">Close navigation drawer</string>    <!--login hint-->    <string name="account_hint">Account:</string>    <string name="password_hint">Password:</string>    <!--toolbar satrt-->    <!--centertext-->    <string name="title_baidu_text">百度一下</string>    <string name="title_app_list_info">应用列表</string>    <string name="title_git_hub_text">GitHub</string>    <!--home tab-->    <string name="home_map">Map</string>    <string name="home_kline">KLine</string>    <string name="home_other">Other</string>    <!--righttext-->    <string name="right_share_text">分享</string>    <!--toolbar end-->    <!--button-->    <string name="login_text">Login</string>    <!--contentDescription-->    <string name="right_button">right button</string>    <string name="left_button">left button</string>    <string name="bg_img">bg_img</string>    <!--permission prompt-->    <string name="permission_call_phone">您已禁止%1$s获取拨打电话权限，请到 设置->%2$s->应用权限 中开启</string>    <string name="permission_location">您已禁止%1$s获取定位权限，请到 设置->%2$s->应用权限 中开启</string>    <string name="permission_storage">您已禁止%1$s获取存储权限，请到 设置->%2$s->应用权限 中开启</string>    <!--toast prompt -->    <string name="toast_apk_not_exist">安装包不存在</string>    <!--loading-->    <string name="loading_wait_a_moment">加载中，请稍后...</string>    <!--rxandroid-->    <string name="rxandroid">RxAndroid</string>    <!--rx Creating Observables-->    <string name="rx_creating_observables">Creating Observables</string>    <!--rx Filtering Observables-->    <string name="rx_filtering_observables">Filtering Observables</string>    <string name="rx_filtering_debounce">Debounce</string>    <string name="rx_filtering_distinct">Distinct</string>    <string name="rx_filtering_element_at">ElementAt</string>    <string name="rx_filtering_filter">Filter</string>    <string name="rx_filtering_first">First</string>    <string name="rx_filtering_ignore_elements">IgnoreElements</string>    <string name="rx_filtering_last">Last</string>    <string name="rx_filtering_sample">Sample</string>    <string name="rx_filtering_skip">Skip</string>    <string name="rx_filtering_skip_last">SkipLast</string>    <string name="rx_filtering_take">Take</string>    <string name="rx_filtering_take_last">TakeLast</string>    <!--rx Transforming Observables-->    <string name="rx_transforming_observables">Transforming Observables</string>    <string name="rx_transforming_buffer">Buffer</string>    <string name="rx_transforming_flat_map">FlatMap</string>    <string name="rx_transforming_group_by">GroupBy</string>    <string name="rx_transforming_map">Map</string>    <string name="rx_transforming_scan">Scan</string>    <string name="rx_transforming_window">Window</string>    <!--rx Combining Observables-->    <string name="rx_combining_observables">Combining Observables</string>    <!--rx Error Handling Operators-->    <string name="rx_error_handling_operators">Error Handling Operators</string>    <!--rx Observable Utility Operators-->    <string name="rx_observable_utility_operators">Observable Utility Operators</string>    <!--rx Conditional and Boolean Operators-->    <string name="rx_conditional_and_boolean_operators">Conditional and Boolean Operators</string>    <!--rx Mathematical and Aggregate Operators-->    <string name="rx_mathematical_and_aggregate_operators">Mathematical and Aggregate Operators</string>    <!--rx Backpressure Operators-->    <string name="rx_backpressure_operators">Backpressure Operators</string>    <!--rx Connectable Observable Operators-->    <string name="rx_connectable_observable_operators">Connectable Observable Operators</string>    <!--rx Operators to Convert Observables-->    <string name="rx_operators_to_convert_observables">Operators to Convert Observables</string></resources>