<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".module.login.activity.LoginActivity">    <!--logo-->    <ImageView        android:id="@+id/iv_logo"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:contentDescription="@string/logo"        app:layout_constraintBottom_toBottomOf="@id/et_account"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:srcCompat="@mipmap/ic_toaok_launcher" />    <!--account-->    <EditText        android:id="@+id/et_account"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:hint="@string/account_hint"        android:inputType="textEmailAddress"        android:paddingLeft="10dp"        android:paddingRight="10dp"        app:layout_constraintBottom_toBottomOf="@id/et_password"        app:layout_constraintTop_toTopOf="@id/iv_logo"        app:layout_constraintVertical_bias="0.58" />    <!--password-->    <EditText        android:id="@+id/et_password"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:hint="@string/password_hint"        android:inputType="textPassword"        android:paddingLeft="10dp"        android:paddingRight="10dp"        app:layout_constraintBottom_toTopOf="@id/login"        app:layout_constraintTop_toTopOf="@id/et_account"        app:layout_constraintVertical_bias="0.28" />    <!--login-->    <Button        android:id="@+id/login"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_marginLeft="10dp"        android:layout_marginRight="10dp"        android:text="@string/login_text"        android:textAllCaps="false"        android:background="@drawable/bg_selector_button"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@id/et_password" /></android.support.constraint.ConstraintLayout>